nextflow/non-experimental/work/cd/bbf0b1a31065da03794905674c5bad/.command.log
  File "/g/data/xl04/ka6418/github/ausarg/nextflow/non-experimental/work/cd/bbf0b1a31065da03794905674c5bad/.command.sh", line 105
    file_prefix = f"{"BASDU"}_{"PAF987"}_{"PACBIO_SMRT"}"
                      ^^^^^
SyntaxError: f-string: expecting '}'

======================================================================================
                  Resource Usage on 2023-11-21 10:37:34:
   Job Id:             101928593.gadi-pbs
   Project:            xl04
   Exit Status:        1
   Service Units:      0.01
   NCPUs Requested:    8                      NCPUs Used: 8               
                                           CPU Time Used: 00:00:01        
   Memory Requested:   16.0GB                Memory Used: 71.41MB         
   Walltime requested: 01:00:00            Walltime Used: 00:00:03        
   JobFS requested:    100.0MB                JobFS used: 0B              
======================================================================================
